tests/type-errors/no_pkey_assignment_in_addupdate.arl
archetype no_pkey_assignment_in_add_update

asset myasset {
  id : string;
}

entry exec (k : string) {
  effect {
    myasset.add_update(k, {id = "key"})
  }
}
